# genivi-capi-someip-examples

./: .clang-format  .gitignore  .gitmodules  Android.bp  CMakeLists.txt  README.md
aosp/: Interface1-Client.rc  Interface1-Client_InternalCompilation.rc  Interface1-Service.rc  Interface1-Service_InternalCompilation.rc  config.mk  internal_cmp.bp  internal_cmp_rc.bp  runtime_lib.bp  runtime_lib_rc.bp
aosp/sepolicy/: Interface1-Client.te  Interface1-Service.te  file_contexts
config/: commonapi.ini  vsomeip.json
fidl/: Interface1.fdepl  Interface1.fidl
include/: Interface1Client.hpp  Interface1Service.hpp
scripts/: RunInterface1Client.sh  RunInterface1Client_InternalCompilation.sh  RunInterface1Service.sh  RunInterface1Service_InternalCompilation.sh
src/: Client.cpp  Interface1Client.cpp  Interface1Service.cpp  Interface1StubImpl.cpp  Interface1StubImpl.hpp  Service.cpp
src-gen/commonapi/v0/commonapi/examples/: Interface1.hpp  Interface1Proxy.hpp  Interface1ProxyBase.hpp  Interface1Stub.hpp  Interface1StubDefault.cpp  Interface1StubDefault.hpp
src-gen/someip/v0/commonapi/examples/: Interface1SomeIPDeployment.cpp  Interface1SomeIPDeployment.hpp  Interface1SomeIPProxy.cpp  Interface1SomeIPProxy.hpp  Interface1SomeIPStubAdapter.cpp  Interface1SomeIPStubAdapter.hpp
